--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ ToDo.md
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# lock files
+bun.lock
+bun.lockb
+package-lock.json
+yarn.lock
+pnpm-lock.*
