--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,6 @@
 node_modules
 .next
+dist
 .vscode
 .husky
 .nyc_output
@@ -9,7 +10,7 @@ node_modules
 *.git
 pnpm-lock.yaml
 package-lock.json
-bun.lockb
+bun.lock*
 
 *.prisma
 prisma/
