--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "next-boilerplate",
-	"version": "2.0.1",
+	"name": "sxperlinx.github.io",
+	"version": "0.1.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
@@ -31,28 +31,21 @@
 		"tailwindcss": "^4.0.14"
 	},
 	"devDependencies": {
-		"@inquirer/prompts": "^7.4.0",
 		"@eslint/eslintrc": "^3.3.0",
 		"@eslint/js": "^9.22.0",
-		"@testing-library/dom": "^10.4.0",
-		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/react": "^16.2.0",
+		"@inquirer/prompts": "^7.4.0",
 		"@types/node": "^22.13.10",
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
 		"@typescript-eslint/eslint-plugin": "^8.27.0",
 		"@typescript-eslint/parser": "^8.27.0",
-		"bun": "^1.2.7",
 		"eslint": "^9.22.0",
 		"eslint-config-next": "15.2.2",
 		"eslint-config-prettier": "^10.1.1",
 		"eslint-plugin-jsdoc": "^50.6.8",
 		"eslint-plugin-react": "^7.37.4",
-		"eslint-plugin-tailwindcss": "^3.18.0",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"husky": "^9.1.7",
-		"jest": "^29.7.0",
-		"jest-environment-jsdom": "^29.7.0",
 		"lint-staged": "^15.5.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-jsdoc": "^1.3.2",
