--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -7,7 +7,7 @@ name: Deploy to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ['main']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,7 +21,7 @@ permissions:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
+  group: 'pages'
   cancel-in-progress: false
 
 jobs:
@@ -48,11 +48,13 @@ jobs:
             exit 1
           fi
       - name: Install dependencies
-        run: ${{ steps.detect-install-command.outputs.manager }} ${{ steps.detect-install-command.outputs.command }}
+        run:
+          ${{ steps.detect-install-command.outputs.manager }} ${{
+          steps.detect-install-command.outputs.command }}
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "23.11.0"
+          node-version: '23.11.0'
           cache: ${{ steps.detect-install-command.outputs.manager }}
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -68,7 +70,9 @@ jobs:
           path: |
             dist/cache
           # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          key:
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{
+            hashFiles('**.[jt]s', '**.[jt]sx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
