--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"eslint-config-next": "15.2.4",
 		"eslint-config-prettier": "^10.1.1",
 		"eslint-plugin-jsdoc": "^50.6.9",
+		"eslint-plugin-next": "^0.0.0",
 		"eslint-plugin-react": "^7.37.5",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"husky": "^9.1.7",
